cleanup Intellij inspections .collect(Collectors.toList()) -> toList()