@@ -18,7 +18,6 @@ import java.util.ArrayList;
 import java.util.Formatter;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * A command line program that performs the key ceremony to create the Guardians, using standard library and local Guardians.
@@ -281,7 +280,9 @@ public class PerformKeyCeremony {
             this.guardian_records);
 
     // save private data for decrypting
-    List<GuardianPrivateRecord> gprivate = this.guardians.stream().map(g -> g.export_private_data()).collect(Collectors.toList());
+    List<GuardianPrivateRecord> gprivate = this.guardians.stream()
+            .map(g -> g.export_private_data())
+            .toList();
     PrivateData pdata = publisher.makePrivateData(false, false);
     pdata.writeGuardiansJson(gprivate);
     return true;
