@@ -64,7 +64,7 @@ public class ElectionInputBuilder {
     //                  @Nullable ContactInformation contact_information
     return new Manifest(election_scope_id, Manifest.ElectionType.general, OffsetDateTime.now(), OffsetDateTime.now(),
             ImmutableList.of(gpUnit), parties, candidates,
-            contests.stream().map(ContestBuilder::build).collect(Collectors.toList()),
+            contests.stream().map(ContestBuilder::build).toList(),
             ImmutableList.of(ballotStyle), null, null, null);
   }
 
@@ -114,7 +114,7 @@ public class ElectionInputBuilder {
       //                              @Nullable InternationalizedText ballot_subtitle
       return new Manifest.ContestDescription(id, district, seq, Manifest.VoteVariationType.one_of_m,
               allowed, allowed, "name",
-              selections.stream().map(SelectionBuilder::build).collect(Collectors.toList()),
+              selections.stream().map(SelectionBuilder::build).toList(),
               null, null, ImmutableList.of());
     }
 
